--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,3 +1,3 @@
-@@include('../blocks/head/head.html')
+@@include("blocks/head/head.html", {"title": "Index"})
 	<p>here is your code</p>
-@@include('../blocks/link/link.html')
+@@include("blocks/link/link.html")
